--- a/linux/gamesvr-hl2dm-freeplay/dockerfile
+++ b/linux/gamesvr-hl2dm-freeplay/dockerfile
@@ -1,9 +1,9 @@
-FROM ll/gamesvr-csgo
+FROM ll/gamesvr-hl2dm
 
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV SERVER_MAINTAINER "Laclede's LAN"
-ENV SERVER_NAME "LL Counter-Strike GO Tournament Server"
+ENV SERVER_NAME "LL Half-Life 2 Deathmatch Freeplay"
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds.linux"
 RUN cd `mktemp -d` && \
@@ -15,15 +15,7 @@ RUN cd `mktemp -d` && \
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-csgo"
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-csgo && \
-	rm -rf *.git && \
-	cd `ls -A | head -1` && \
-	rm -f *.md && \
-	cp -r * /gameservers/csgo/
-	
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-tourney"	
-RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-csgo-tourney && \
+	git clone https://github.com/LacledesLAN/gamesvr-srcds-hl2dm-freeplay && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
