Refactored steam contextualization

--- a/linux/gamesvr/dockerfile
+++ b/linux/gamesvr/dockerfile
@@ -5,18 +5,20 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "LL Base Game Server"
 
+ADD context_steamcmd /gameservers/_util/steamcmd
+
 # Install required packages and clean up unused dependencies
 RUN apt-get update && \
 	apt-get install -y curl git libc6-i386 lib32gcc1 lib32stdc++6 lib32tinfo5 lib32z1 tar wget && \
 	apt-get -y clean && \
 	apt-get -y autoremove
 	
-# Stage SteamCMD to /gameservers/util/steamcmd/
-RUN mkdir -p /gameservers/util/steamcmd  && \
+# Stage SteamCMD to /gameservers/_util/steamcmd/
+RUN mkdir -p /gameservers/_util/steamcmd  && \
 	wget -qO- -r --tries=10 --waitretry=20 --output-document=tmp.tar.gz http://media.steampowered.com/installer/steamcmd_linux.tar.gz && \
-	tar -xvzf tmp.tar.gz -C /gameservers/util/steamcmd/ && \
+	tar -xvzf tmp.tar.gz -C /gameservers/_util/steamcmd/ && \
 	rm tmp.tar.gz && \
-	sh /gameservers/util/steamcmd/steamcmd.sh +quit
+	sh /gameservers/_util/steamcmd/steamcmd.sh +quit
 
 #Get and stage from gamesvr GitHub Repo "gamesvr"
 RUN cd `mktemp -d` && \
