Corrected Build Flows

--- a/linux/gamesvr-hl2dm-freeplay/dockerfile
+++ b/linux/gamesvr-hl2dm-freeplay/dockerfile
@@ -5,22 +5,14 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "LL Half-Life 2 Deathmatch Freeplay"
 
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds.linux"
-RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds.linux && \
-	rm -rf *.git && \
-	cd `ls -A | head -1` && \
-	rm -f *.md && \
-	cp -r * /gameservers/csgo/
-
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-csgo"
+#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-hl2dm"
 RUN cd `mktemp -d` && \
 	git clone https://github.com/LacledesLAN/gamesvr-srcds-hl2dm-freeplay && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
-	cp -r * /gameservers/csgo/
-	
+	cp -r * /gameservers/hl2dm/
+
 # Clean out tmp directory
 RUN rm -fr /tmp/*
 
