--- a/linux/gamesvr-tf2/dockerfile
+++ b/linux/gamesvr-tf2/dockerfile
@@ -1,1 +1,23 @@
+FROM ll/gamesvr
+
+MAINTAINER Laclede's LAN <contact@lacledeslan.com>
+
+ENV SERVER_MAINTAINER "Laclede's LAN"
+ENV SERVER_NAME "LL Team Fortress 2 Server Base Level"
+
+ADD context_steamapp /gameservers/tf2
+
+# Install Counter-Strike: Global-Offensive using SteamCMD
+RUN mkdir -p /gameservers/tf2 && \
+	bash /gameservers/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gameservers/tf2 +app_update 232250 +quit -validate && \
+	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#`
+
+# Clean out tmp directory
+RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
+
+WORKDIR /gameservers/
+
+#TODO:
+#get ftp contents -=> content.lan/fastDownloads/tf2/
+
 #gamesvr-tf2
