Restructure MM/SM repos

--- a/linux/gamesvr-csgo-tourney/dockerfile
+++ b/linux/gamesvr-csgo-tourney/dockerfile
@@ -5,9 +5,17 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "LL Counter-Strike GO Tournament Server"
 
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds.linux"
+#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-metamod.linux"
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds.linux && \
+	git clone https://github.com/LacledesLAN/gamesvr-srcds-metamod.linux && \
+	rm -rf *.git && \
+	cd `ls -A | head -1` && \
+	rm -f *.md && \
+	cp -r * /gameservers/csgo/csgo/
+	
+#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-sourcemod.linux"
+RUN cd `mktemp -d` && \
+	git clone https://github.com/LacledesLAN/gamesvr-srcds-sourcemod.linux&& \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
@@ -21,14 +29,14 @@ RUN cd `mktemp -d` && \
 	rm -f *.md && \
 	cp -r * /gameservers/csgo/
 	
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-tourney"	
+#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-csgo-tourney"	
 RUN cd `mktemp -d` && \
 	git clone https://github.com/LacledesLAN/gamesvr-srcds-csgo-tourney && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
 	cp -r * /gameservers/csgo/
-	
+
 # Clean out tmp directory
 RUN rm -fr /tmp/*
 
