--- a/linux/gamesvr-csgo-tourney/dockerfile
+++ b/linux/gamesvr-csgo-tourney/dockerfile
@@ -7,7 +7,7 @@ ENV SERVER_NAME "LL Counter-Strike GO Tournament Server"
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-metamod.linux"
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-metamod.linux && \
+	git clone git://github.com/LacledesLAN/gamesvr-srcds-metamod.linux && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
@@ -15,7 +15,7 @@ RUN cd `mktemp -d` && \
 	
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-sourcemod.linux"
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-sourcemod.linux && \
+	git clone git://github.com/LacledesLAN/gamesvr-srcds-sourcemod.linux && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
@@ -23,7 +23,7 @@ RUN cd `mktemp -d` && \
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-csgo"
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-csgo && \
+	git clone git://github.com/LacledesLAN/gamesvr-srcds-csgo && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
@@ -31,7 +31,7 @@ RUN cd `mktemp -d` && \
 	
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-csgo-tourney"	
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-csgo-tourney && \
+	git clone git://github.com/LacledesLAN/gamesvr-srcds-csgo-tourney && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
