--- a/linux/gamesvr-hl2dm-freeplay/dockerfile
+++ b/linux/gamesvr-hl2dm-freeplay/dockerfile
@@ -5,15 +5,23 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "LL Half-Life 2 Deathmatch Freeplay"
 
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-hl2dm"
+#Get and stage from gamesvr GitHub Repo " gamesvr-srcds-metamod.linux"
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-hl2dm-freeplay && \
+	git clone git://github.com/LacledesLAN/ gamesvr-srcds-metamod.linux && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
 	cp -r * /gameservers/hl2dm/
 	
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-hl2dm"
+#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-sourcemod.linux"
+RUN cd `mktemp -d` && \
+	git clone git://github.com/LacledesLAN/gamesvr-srcds-sourcemod.linux && \
+	rm -rf *.git && \
+	cd `ls -A | head -1` && \
+	rm -f *.md && \
+	cp -r * /gameservers/hl2dm/
+	
+#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-hl2dm-freeplay "
 RUN cd `mktemp -d` && \
 	git clone https://github.com/LacledesLAN/gamesvr-srcds-hl2dm-freeplay && \
 	rm -rf *.git && \
