--- a/linux/gamesvr-hl2dm-freeplay/dockerfile
+++ b/linux/gamesvr-hl2dm-freeplay/dockerfile
@@ -11,7 +11,7 @@ RUN cd `mktemp -d` && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
-	cp -r * /gameservers/hl2dm/
+	cp -r * /gameservers/hl2dm/hl2mp
 	
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-sourcemod.linux"
 RUN cd `mktemp -d` && \
@@ -19,11 +19,11 @@ RUN cd `mktemp -d` && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
-	cp -r * /gameservers/hl2dm/
+	cp -r * /gameservers/hl2dm/hl2mp
 	
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-hl2dm-freeplay "
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr-srcds-hl2dm-freeplay && \
+	git clone git://github.com/LacledesLAN/gamesvr-srcds-hl2dm-freeplay && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
