--- a/linux/gamesvr/dockerfile
+++ b/linux/gamesvr/dockerfile
@@ -22,7 +22,7 @@ RUN mkdir -p /gameservers/_util/steamcmd  && \
 
 #Get and stage from gamesvr GitHub Repo "gamesvr"
 RUN cd `mktemp -d` && \
-	git clone https://github.com/LacledesLAN/gamesvr && \
+	git clone git://github.com/LacledesLAN/gamesvr && \
 	rm -rf *.git && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
