--- a/linux/gamesvr-tf2-blindfrag/Dockerfile
+++ b/linux/gamesvr-tf2-blindfrag/Dockerfile
@@ -3,7 +3,7 @@ FROM ll/gamesvr-tf2
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV SERVER_MAINTAINER "Laclede's LAN"
-ENV SERVER_NAME "LL Team Fortress 2 Blind Frag Server "
+ENV SERVER_NAME "ll/gamesvr-tf2-blindfrag"
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-metamod.linux"
 RUN cd `mktemp -d` && \
@@ -20,14 +20,6 @@ RUN cd `mktemp -d` && \
 	cd `ls -A | head -1` && \
 	rm -f *.md && \
 	cp -r * /gameservers/tf2/tf/
-
-#Get and stage from gamesvr GitHub Repo "gamesvr-srcds-tf2"
-RUN cd `mktemp -d` && \
-	git clone git://github.com/LacledesLAN/gamesvr-srcds-tf2 && \
-	rm -rf *.git && \
-	cd `ls -A | head -1` && \
-	rm -f *.md && \
-	cp -r * /gameservers/tf2/
 
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-tf2-blindfrag"
 RUN cd `mktemp -d` && \
