--- a/linux/gamesvr/Dockerfile
+++ b/linux/gamesvr/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 
 ENV SERVER_MAINTAINER "Laclede's LAN"
-ENV SERVER_NAME "LL Base Game Server"
+ENV SERVER_NAME "ll/gamesvr"
 
 ADD / /gameservers/
 
