--- a/linux/gamesvr-csgo/Dockerfile
+++ b/linux/gamesvr-csgo/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-csgo"
 
-ADD / /gameservers/csgo/
+COPY / /gameservers/csgo/
 
 # Install Counter-Strike: Global-Offensive using SteamCMD
 RUN mkdir -p /gameservers/csgo && \
