--- a/linux/gamesvr-tf2/Dockerfile
+++ b/linux/gamesvr-tf2/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-tf2"
 
-ADD / /gameservers/tf2
+COPY / /gameservers/tf2
 
 # Install Counter-Strike: Global-Offensive using SteamCMD
 RUN mkdir -p /gameservers/tf2 && \
