--- a/linux/gamesvr-blackmesa/Dockerfile
+++ b/linux/gamesvr-blackmesa/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-blackmesa"
 
-COPY / /gameservers/blackmesa/
+COPY . /gameservers/blackmesa/
 
 # Install Black Mesa Dedicated Server using SteamCMD
 RUN mkdir -p /gameservers/blackmesa && \
@@ -15,4 +15,4 @@ RUN mkdir -p /gameservers/blackmesa && \
 # Clean out tmp directory
 RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
 
-WORKDIR /gameservers/
+WORKDIR /gameservers/blackmesa/
