--- a/linux/gamesvr-csgo-tourney/Dockerfile
+++ b/linux/gamesvr-csgo-tourney/Dockerfile
@@ -5,6 +5,8 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-csgo-tourney"
 
+COPY . /gameservers/csgo/
+
 #Get and stage from gamesvr GitHub Repo "gamesvr-srcds-metamod.linux"
 RUN cd `mktemp -d` && \
 	git clone git://github.com/LacledesLAN/gamesvr-srcds-metamod.linux && \
@@ -40,4 +42,4 @@ RUN cd `mktemp -d` && \
 # Clean out tmp directory
 RUN rm -fr /tmp/*
 
-WORKDIR /gameservers/
+WORKDIR /gameservers/csgo/
