--- a/linux/gamesvr-tfc/Dockerfile
+++ b/linux/gamesvr-tfc/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-tfc"
 
-COPY / /gameservers/tfc
+COPY . /gameservers/tfc/
 
 # Install Team Fortress Classic Dedicated Server using SteamCMD
 RUN mkdir -p /gameservers/tfc && \
@@ -13,4 +13,4 @@ RUN mkdir -p /gameservers/tfc && \
 	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#` && \
 	RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
 
-WORKDIR /gameservers/
+WORKDIR /gameservers/tfc/
