--- a/linux/gamesvr-css/Dockerfile
+++ b/linux/gamesvr-css/Dockerfile
@@ -5,14 +5,14 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-css"
 
-COPY . /gameservers/css/
+COPY . /gamesvr/css/
 
 # Install Counter-Strike Source using SteamCMD
-RUN mkdir -p /gameservers/css && \
-	bash /gameservers/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gameservers/css +app_update 232330 +quit -validate && \
+RUN mkdir -p /gamesvr/css && \
+	bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/css +app_update 232330 +quit -validate && \
 	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#`
 
 # Clean out tmp directory
 RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
 
-WORKDIR /gameservers/css/
+WORKDIR /gamesvr/css/
