--- a/linux/gamesvr-l4d2/Dockerfile
+++ b/linux/gamesvr-l4d2/Dockerfile
@@ -5,14 +5,14 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-l4d2"
 
-COPY . /gameservers/l4d2/
+COPY . /gamesvr/l4d2/
 
 # Install Left 4 Dead 2 Dedicated Server using SteamCMD
-RUN mkdir -p /gameservers/l4d2 && \
-	bash /gameservers/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gameservers/l4d2 +app_update 222860 +quit -validate && \
+RUN mkdir -p /gamesvr/l4d2 && \
+	bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/l4d2 +app_update 222860 +quit -validate && \
 	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#`
 
 # Clean out tmp directory
 RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
 
-WORKDIR /gameservers/l4d2/
+WORKDIR /gamesvr/l4d2/
