--- a/linux/gamesvr/Dockerfile
+++ b/linux/gamesvr/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr"
 
-COPY . /gameservers/
+COPY . /gamesvr/
 
 # Install required packages and clean up unused dependencies
 RUN apt-get update && \
@@ -14,12 +14,12 @@ RUN apt-get update && \
 	apt-get -y autoremove && \
 	rm -fr /tmp/*
 	
-# Stage SteamCMD to /gameservers/_util/steamcmd/
-RUN mkdir -p /gameservers/_util/steamcmd  && \
+# Stage SteamCMD to /gamesvr/_util/steamcmd/
+RUN mkdir -p /gamesvr/_util/steamcmd  && \
 	wget -qO- -r --tries=10 --waitretry=20 --output-document=tmp.tar.gz http://media.steampowered.com/installer/steamcmd_linux.tar.gz && \
-	tar -xvzf tmp.tar.gz -C /gameservers/_util/steamcmd/ && \
+	tar -xvzf tmp.tar.gz -C /gamesvr/_util/steamcmd/ && \
 	rm tmp.tar.gz && \
-	sh /gameservers/_util/steamcmd/steamcmd.sh +quit && \
+	sh /gamesvr/_util/steamcmd/steamcmd.sh +quit && \
 	rm -fr /tmp/*
 
-WORKDIR /gameservers/
+WORKDIR /gamesvr/
