--- a/linux/gamesvr-blackmesa/Dockerfile
+++ b/linux/gamesvr-blackmesa/Dockerfile
@@ -5,14 +5,14 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-blackmesa"
 
-COPY . /gameservers/blackmesa/
+COPY . /gamesvr/blackmesa/
 
 # Install Black Mesa Dedicated Server using SteamCMD
-RUN mkdir -p /gameservers/blackmesa && \
-	bash /gameservers/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gameservers/blackmesa +app_update 570 +quit -validate && \
+RUN mkdir -p /gamesvr/blackmesa && \
+	bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/blackmesa +app_update 570 +quit -validate && \
 	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#`
 
 # Clean out tmp directory
 RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
 
-WORKDIR /gameservers/blackmesa/
+WORKDIR /gamesvr/blackmesa/
