--- a/linux/gamesvr-tf2/Dockerfile
+++ b/linux/gamesvr-tf2/Dockerfile
@@ -5,17 +5,17 @@ MAINTAINER Laclede's LAN <contact@lacledeslan.com>
 ENV SERVER_MAINTAINER "Laclede's LAN"
 ENV SERVER_NAME "ll/gamesvr-tf2"
 
-COPY . /gameservers/tf2/
+COPY . /gamesvr/tf2/
 
 # Install Counter-Strike: Global-Offensive using SteamCMD
-RUN mkdir -p /gameservers/tf2 && \
-	bash /gameservers/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gameservers/tf2 +app_update 232250 +quit -validate && \
+RUN mkdir -p /gamesvr/tf2 && \
+	bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/tf2 +app_update 232250 +quit -validate && \
 	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#`
 
 # Clean out tmp directory
 RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
 
-WORKDIR /gameservers/tf2/
+WORKDIR /gamesvr/tf2/
 
 #TODO:
 #get ftp contents -=> content.lan/fastDownloads/tf2/
