--- a/linux/gamesvr-tf2/Dockerfile
+++ b/linux/gamesvr-tf2/Dockerfile
@@ -10,10 +10,8 @@ COPY . /gamesvr/tf2/
 # Install Counter-Strike: Global-Offensive using SteamCMD
 RUN mkdir -p /gamesvr/tf2 && \
 	bash /gamesvr/_util/steamcmd/steamcmd.sh +login anonymous +force_install_dir /gamesvr/tf2 +app_update 232250 +quit -validate && \
-	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#`
-
-# Clean out tmp directory
-RUN rm -fr /tmp/* `#Clean out temp directory to save space#`
+	sleep 3 `#Give steamcmd time to any handles to files in /tmp/#` && \
+	rm -fr /tmp/* `#Clean out temp directory to save space#`
 
 WORKDIR /gamesvr/tf2/
 
